--- a/readthedocs.yaml
+++ b/readthedocs.yaml
@@ -3,7 +3,16 @@ version: 2
 sphinx:
   configuration: docs/conf.py
 
+formats:
+  - pdf
+  - htmlzip
+  - epub
+
 python:
   version: 3.7
   install:
-    - requirements: docs/requirements.txt
+    - requirements: requirements.txt
+    - method: pip
+      path: .
+      extra_requirements:
+        - docs
