--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,11 +6,11 @@ repos:
           - id: end-of-file-fixer
           - id: trailing-whitespace
 
-    - repo: https://github.com/hakancelik96/unimport
-      rev: 73e9054125d36a16caeffefd1049a83035ccfbf3
-      hooks:
-          - id: unimport
-            args: [--remove, --include-star-import]
+    # - repo: https://github.com/hakancelik96/unimport
+    #   rev: 73e9054125d36a16caeffefd1049a83035ccfbf3
+    #   hooks:
+    #       - id: unimport
+    #         args: [--remove, --include-star-import]
     - repo: https://github.com/pycqa/isort
       rev: "98673ff4bc158fdc79f587775b6a15abd9fdc248"
       hooks:
