--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,8 @@ simphony>=0.4.0
 sklearn>=0.0
 pandas>=1.3.2
 electromagneticpython @ git+git://github.com/lbolla/EMpy@4bf1b01#egg=electromagneticpython
+electromagneticpythongpu @ git+git://github.com/hammy4815/EMpy_gpu@master#egg=electromagneticpythongpu
 torch
 torchvision
 tdqm
+scikit-cuda
