--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,11 @@
 sphinx==4.1.2
 sphinx_rtd_theme==0.5.2
 matplotlib>=3.3.4
-numpy>=1.21.2
+numpy
 scipy>=1.5.4
 simphony>=0.4.0
 sklearn>=0.0
-pandas>=1.3.2
+pandas
 electromagneticpython @ git+git://github.com/lbolla/EMpy@4bf1b01#egg=electromagneticpython
 electromagneticpythongpu @ git+git://github.com/hammy4815/EMpy_gpu@master#egg=electromagneticpythongpu
 torch
