--- a/tox.ini
+++ b/tox.ini
@@ -10,18 +10,18 @@ deps=
     -rrequirements_dev.txt
 
 # Linters
-[testenv:flake8]
-basepython = python3
-skip_install = true
-deps =
-    flake8
-    flake8-bugbear
-    flake8-docstrings>=1.3.1
-    flake8-import-order>=0.9
-    flake8-typing-imports>=1.1
-    pep8-naming
-commands =
-    flake8
+# [testenv:flake8]
+# basepython = python3
+# skip_install = true
+# deps =
+#     flake8
+#     flake8-bugbear
+#     flake8-docstrings>=1.3.1
+#     flake8-import-order>=0.9
+#     flake8-typing-imports>=1.1
+#     pep8-naming
+# commands =
+#     flake8
 
 
 # Flake8 Configuration
