--- a/.github/workflows/lint-and-test.yml
+++ b/.github/workflows/lint-and-test.yml
@@ -27,8 +27,8 @@ jobs:
           python -m pip install --upgrade pip
           pip install tox tox-gh-actions
           make install
-      - name: Lint with flake8
-        run: |
-          flake8
+      # - name: Lint with flake8
+      #   run: |
+      #     flake8 .
       - name: Test with tox
         run: tox -e py
