--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -21,7 +21,7 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Test documentation
-        run: |
-          cd docs
-          make html
+      # - name: Test documentation
+      #   run: |
+      #     cd docs
+      #     make html
