--- a/requirements.txt
+++ b/requirements.txt
@@ -10,5 +10,6 @@ torch
 torchvision
 tdqm
 ElectroMagneticPythonGpu
+shapely
 # electromagneticpython @ git+git://github.com/lbolla/EMpy@4bf1b01#egg=electromagneticpython
 # electromagneticpythongpu @ git+git://github.com/hammy4815/EMpy_gpu@master#egg=electromagneticpythongpu
