--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-# Defining the exact version will make sure things don't break
 Pillow
 matplotlib
 numpy
@@ -11,5 +10,6 @@ torchvision
 tdqm
 ElectroMagneticPythonGpu
 shapely
+sympy
 # electromagneticpython @ git+git://github.com/lbolla/EMpy@4bf1b01#egg=electromagneticpython
 # electromagneticpythongpu @ git+git://github.com/hammy4815/EMpy_gpu@master#egg=electromagneticpythongpu
