should pass tests

--- a/requirements.txt
+++ b/requirements.txt
@@ -11,5 +11,6 @@ tdqm
 ElectroMagneticPythonGpu
 shapely
 sympy
+tidy3d-beta
 # electromagneticpython @ git+git://github.com/lbolla/EMpy@4bf1b01#egg=electromagneticpython
 # electromagneticpythongpu @ git+git://github.com/hammy4815/EMpy_gpu@master#egg=electromagneticpythongpu
